<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/animateimage" />

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
         android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_error" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m"
            android:gravity="center_horizontal"
            android:text="@string/txt_no_connect"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/txt_no_connect_description"
            android:textSize="19dp" />

        <Button
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:text="@string/try_againbtn"
            android:textColor="@color/card_background"
            android:background="@drawable/roundbtn"
            android:paddingRight="@dimen/margin_xl"
            android:paddingLeft="@dimen/margin_xl"
            android:layout_gravity="center_horizontal"
             />

    </LinearLayout>

</FrameLayout>

</LinearLayout>