<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    <variable
    name="myAdapte"
    type="com.bakribrahim.newsapp.UI.articleAdapter" />
    </data>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swiperrefresh">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootlayout">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/errorlayout"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/animateimage"

                 />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_error" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                     >

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_xxxl" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_m"
                        android:gravity="center_horizontal"
                        android:text="@string/txt_no_connect"
                        android:layout_marginBottom="@dimen/margin_s"
                        android:textSize="40dp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/margin_xxxl"
                        android:text="@string/txt_no_connect_description"
                        android:textSize="19dp" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/try_againbtn"
                        android:textColor="@color/card_background"
                        android:background="@drawable/roundbtn"
                        android:paddingRight="@dimen/margin_xl"
                        android:paddingLeft="@dimen/margin_xl"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/margin_l"
                        android:onClick="try_button_click"

                        />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_"
            android:orientation="vertical"
            android:id="@+id/mainlayout"
            >



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_s"
                android:layout_weight="2"
                android:adapter="@{myAdapte}"
                android:layoutAnimation="@anim/layout_animation_down_to_up" />
        </LinearLayout>
    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>

